; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c_dm_cache_get_free_metadata_block_count.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-cache-metadata.c_dm_cache_get_free_metadata_block_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_cache_metadata = type { i32, i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dm_cache_get_free_metadata_block_count(%struct.dm_cache_metadata* %0, i32* %1) #0 {
  %3 = alloca %struct.dm_cache_metadata*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store %struct.dm_cache_metadata* %0, %struct.dm_cache_metadata** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i32, i32* @EINVAL, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %5, align 4
  %8 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %9 = call i32 @READ_LOCK(%struct.dm_cache_metadata* %8)
  %10 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %11 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %20, label %14

14:                                               ; preds = %2
  %15 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %16 = getelementptr inbounds %struct.dm_cache_metadata, %struct.dm_cache_metadata* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @dm_sm_get_nr_free(i32 %17, i32* %18)
  store i32 %19, i32* %5, align 4
  br label %20

20:                                               ; preds = %14, %2
  %21 = load %struct.dm_cache_metadata*, %struct.dm_cache_metadata** %3, align 8
  %22 = call i32 @READ_UNLOCK(%struct.dm_cache_metadata* %21)
  %23 = load i32, i32* %5, align 4
  ret i32 %23
}

declare dso_local i32 @READ_LOCK(%struct.dm_cache_metadata*) #1

declare dso_local i32 @dm_sm_get_nr_free(i32, i32*) #1

declare dso_local i32 @READ_UNLOCK(%struct.dm_cache_metadata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
